--- a/PowerShell/WillPittenger.Goodies.PowerShell.JSON/WillPittenger.Goodies.PowerShell.JSON.csproj
+++ b/PowerShell/WillPittenger.Goodies.PowerShell.JSON/WillPittenger.Goodies.PowerShell.JSON.csproj
@@ -14,6 +14,10 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<PackageProjectUrl>https://github.com/WillPittenger/Goodies/</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/WillPittenger/Goodies/tree/master/PowerShell/WillPittenger.Goodies.PowerShell.JSON</RepositoryUrl>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageTags>Windows,JSON,Converter,Conversion,.NET</PackageTags>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,17 +31,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Management.Automation" Version="7.4.6" PrivateAssets="all" />
+		<PackageReference Include="System.Management.Automation" Version="7.5.0" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\WillPittenger.Goodies.JSON\WillPittenger.Goodies.JSON.csproj" />
 	</ItemGroup>
+	
 	<ItemGroup>
-		<None Update="Org.WillPittenger.PowerShell.Tools.JSON\Org.WillPittenger.PowerShell.Tools.Sounds.psd1">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Org.WillPittenger.PowerShell.Tools.JSON\Org.WillPittenger.PowerShell.Tools.JSON.psm1">
+		<None Update="Org.WillPittenger.PowerShell.Tools.JSON\Org.WillPittenger.PowerShell.Tools.JSON.psd1">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Properties\Icons\Icon 64x64.png">
