--- a/PowerShell/WillPittenger.Goodies.PowerShell.Sounds/WillPittenger.Goodies.PowerShell.Sounds.csproj
+++ b/PowerShell/WillPittenger.Goodies.PowerShell.Sounds/WillPittenger.Goodies.PowerShell.Sounds.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net9.0-windows</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>0.0.1</Version>
+		<Version>0.5.0</Version>
 		<Authors>Will Pittenger</Authors>
 		<Copyright>©2024 Will Pittenger</Copyright>
 		<NeutralLanguage>en-US</NeutralLanguage>
@@ -15,6 +15,9 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/WillPittenger/Goodies/tree/master/PowerShell/WillPittenger.Goodies.PowerShell.Sounds</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/WillPittenger/Goodies</PackageProjectUrl>
+		<PackageTags>Windows;Sounds;Media;.NET</PackageTags>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -28,9 +31,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Management.Automation"
-											Version="7.4.6"
-											PrivateAssets="all" />
+		<PackageReference Include="System.Management.Automation" Version="7.4.6" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -38,10 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="Org.WillPittenger.PowerShell.Tools.Sounds\Org.WillPittenger.PowerShell.Tools.Sounds.psd1">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Org.WillPittenger.PowerShell.Tools.Sounds\Org.WillPittenger.PowerShell.Tools.Sounds.psm1">
+		<None Update="WillPittenger.Goodies.PowerShell.Sounds\WillPittenger.Goodies.PowerShell.Sounds.psd1">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Properties\Icons\Icon 64x64.png">
@@ -50,9 +48,12 @@
 		</None>
 	</ItemGroup>
 
-	<Target Name="PostBuild"
-					AfterTargets="PostBuildEvent">
-		<Exec Command="pwsh -NoLogo -ExecutionPolicy RemoteSigned -command &quot;&amp; {exit (. ./Post-Build.ps1 -TargetDir $(OutDir))}&quot;" />
+	<ItemGroup>
+	  <Folder Include="Docs\" />
+	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="pwsh -NoLogo -ExecutionPolicy RemoteSigned -command &quot;&amp; {exit (. ./Post-Build.ps1 -TargetDir $(OutDir) -ProjectName $(ProjectName))}&quot;" />
 	</Target>
 
 </Project>
