--- a/WillPittenger.Goodies.Sounds/WillPittenger.Goodies.Sounds.csproj
+++ b/WillPittenger.Goodies.Sounds/WillPittenger.Goodies.Sounds.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net9.0-windows</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -10,7 +10,7 @@
 		<Description>API for playing sounds</Description>
 		<Copyright>©2024 Will Pittenger</Copyright>
 		<NeutralLanguage>en-US</NeutralLanguage>
-		<Version>0.0.0.1</Version>
+		<Version>0.5.0</Version>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<IncludeSymbols>True</IncludeSymbols>
