--- a/PowerShell/WillPittenger.Goodies.PowerShell.JSON/WillPittenger.Goodies.PowerShell.JSON.csproj
+++ b/PowerShell/WillPittenger.Goodies.PowerShell.JSON/WillPittenger.Goodies.PowerShell.JSON.csproj
@@ -42,7 +42,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<None Update="Readme.md">
+		<None Update="readme.md">
 		  <Pack>True</Pack>
 		  <PackagePath>\</PackagePath>
 		</None>
