--- a/PowerShell/WillPittenger.Goodies.PowerShell.Sounds/WillPittenger.Goodies.PowerShell.Sounds.csproj
+++ b/PowerShell/WillPittenger.Goodies.PowerShell.Sounds/WillPittenger.Goodies.PowerShell.Sounds.csproj
@@ -18,6 +18,11 @@
 		<RepositoryUrl>https://github.com/WillPittenger/Goodies/tree/master/PowerShell/WillPittenger.Goodies.PowerShell.Sounds</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/WillPittenger/Goodies</PackageProjectUrl>
 		<PackageTags>Windows;Sounds;Media;.NET</PackageTags>
+		<Title>CmdLets for playing sounds in PowerShell</Title>
+		<Description>If you need to play sounds like a task completion sound from your PowerShell scripts, use these CmdLets.
+
+Note; This depends on WillPittenger.Goodies.Sounds.</Description>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -50,6 +55,13 @@
 
 	<ItemGroup>
 	  <Folder Include="Docs\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="readme.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
